# inspect_evals_snowflake_cortex_agents_example

./: LICENSE  README.md  __init__.py  _cortex_agent.py  pyproject.toml
cortex_inspect/: _registry.py  debug_sse.py
